Finalizando o projeto e implementando interface de cadastro de usuário.